--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <li>If you pressed the <span>WhatsApp Web</span> button, you will be taken to the WhatsApp Web app with a chat being open for the said contact.</li>
         </ol>
     </div>
+    
+    <div id="license">Open source on <a href="https://github.com/luchrv/wulink"  rel="noopener" target="_blank">Github</a></div>
+
     <div id="cajacookies" class="footer">
         <p>
             This website uses cookies, if you stay here you accept their use.<br>
