App name changed

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Link maker to send WhatsApp message to unsaved number without adding contact">
-    <meta name="keywords" content="wslink,send,whatsapp,unsaved,number,without,adding,contact,link,maker">
-    <title>wsLink - Link maker to send WhatsApp message to unsaved number without adding contact</title>
+    <meta name="keywords" content="wapplink,send,whatsapp,unsaved,number,without,adding,contact,link,maker">
+    <title>wappLink - Link maker to send WhatsApp message to unsaved number without adding contact</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div id="header">
         <img src="assets/images/WhatsUnknown.svg" alt="">
         <div id="title">
-            wsLink
+            wappLink
         </div>
         <div id="subtitle">Link maker to send WhatsApp message to unsaved number without adding contact</div>
     </div>
