Rename image, and meta og.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Link maker to send WhatsApp message to unsaved number without adding contact">
     <meta name="keywords" content="wapplink,send,whatsapp,unsaved,number,without,adding,contact,link,maker">
+    <meta property="og:url"                content="https://wapplink.luchrv.dev" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="wappLink - by LuChrV" />
+    <meta property="og:description"        content="Link maker to send WhatsApp message to unsaved number without adding contact." />
+    <meta property="og:image"              content="https://wapplink.luchrv.dev/assets/images/wapplink.jpg" />
     <title>wappLink - Link maker to send WhatsApp message to unsaved number without adding contact</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div id="header">
-        <img src="assets/images/WhatsUnknown.svg" alt="">
+        <img src="assets/images/wapplink.svg" alt="">
         <div id="title">
             wappLink
         </div>
@@ -56,7 +61,7 @@
         </ol>
     </div>
     
-    <div id="license">Open source on <a href="https://github.com/luchrv/wulink"  rel="noopener" target="_blank">Github</a></div>
+    <div id="license">Open source on <a href="https://github.com/luchrv/wapplink"  rel="noopener" target="_blank">Github</a></div>
 
     <div id="cajacookies" class="footer">
         <p>
